<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Snack Squad"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="Deliver Favorite Food"
        android:textSize="20dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="SignUp here"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/eTName"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittextwhite"
        android:drawableLeft="@drawable/profile"
        android:drawablePadding="15dp"
        android:elevation="15dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/eTMail"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/edittextwhite"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@+id/eTName"
        app:layout_constraintStart_toStartOf="@+id/eTName"
        app:layout_constraintTop_toBottomOf="@+id/eTName" />

    <EditText
        android:id="@+id/eTPass"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/edittextwhite"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="15dp"
        android:elevation="15dp"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@+id/eTMail"
        app:layout_constraintStart_toStartOf="@+id/eTMail"
        app:layout_constraintTop_toBottomOf="@+id/eTMail">

    </EditText>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/greenbuttongradient"
        android:text="Create Account"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTPass" />

    <TextView
        android:id="@+id/tValreadyAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Already Have an Account? SignIn here"
        android:textColor="#15BE77"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
        app:layout_constraintStart_toStartOf="@+id/btnSignUp"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

</androidx.constraintlayout.widget.ConstraintLayout>